--- a/css/style2.css
+++ b/css/style2.css
@@ -1002,7 +1002,7 @@ body {
 }
 
 .content__item p:first-of-type {
-  margin-top: 3em;
+  margin-top: 1em;
   font-size: 1.15em;
 }
 
